--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-29  Johan Kiviniemi  <devel@johan.kiviniemi.name>
+
+	Point to the Git branch in the man page
+
+	* man/ams-run.1.txt, man/apt-mark-sync.1.txt: Point to the Git branch
+	  instead of the old Bzr branch.
+
 2007-12-28  Johan Kiviniemi  <devel@johan.kiviniemi.name>
 
 	Initial import
