--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+apt-mark-sync (0.0~git20071229a-0ubuntu2) hardy; urgency=low
+
+  * Removed the Vcs-* fields since they pointed to a private branch not
+    accessible by ~ubuntu-dev.
+
+ -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Tue, 01 Jan 2008 11:59:30 +0200
+
 apt-mark-sync (0.0~git20071229a-0ubuntu1) hardy; urgency=low
 
   * Initial release (LP: #179000).
