--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-apt-mark-sync (0.0.1-0ubuntu1) hardy; urgency=low
+apt-mark-sync (0.0.2-0ubuntu1) hardy; urgency=low
 
-  * Upstream released the previous snapshot as 0.0.1.
+  * Upstream released 0.0.2.
   * Removed the Vcs-* fields since they pointed to a private branch not
     accessible by ~ubuntu-dev.
 
- -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Tue, 01 Jan 2008 12:02:09 +0200
+ -- Johan Kiviniemi <debian@johan.kiviniemi.name>  Wed, 02 Jan 2008 03:00:15 +0200
 
 apt-mark-sync (0.0~git20071229a-0ubuntu1) hardy; urgency=low
 
